# ckb-contract-guidelines

./: .gitmodules  README.md
c/: .gitignore  Makefile  bin_sample.c  lib_sample.c
c/scripts/: run_sim_tests.sh
c/tests/: Cargo.toml
c/tests/src/: lib.rs  tests.rs
rust/: Cargo.toml  Makefile  README.md  capsule.toml
rust/contracts/nft-validator/: Cargo.toml
rust/contracts/nft-validator/src/: main.rs  validator.rs
rust/natives/: Cargo.toml
rust/natives/src/: nft_validator.rs
rust/scripts/: run_sim_tests.sh
rust/tests/: Cargo.toml
rust/tests/src/: tests.rs
